--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>범인찾기</title>
+	<meta name="author" content="Young-jae">
+	<meta name="keywords" content="For,반복문,단순반복작업,if">
+	<meta name="description" content="For문(반복문)을 통해 단순반복작업을 컴퓨터에게 수행하도록 한다 	만약 더이상 반복을 할 필요가 없다면 반복을 그만둔다">
+
+
+	<link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
