--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 	<meta name="author" content="Young-jae">
 	<meta name="keywords" content="For,반복문,단순반복작업,if">
 	<meta name="description" content="For문(반복문)을 통해 단순반복작업을 컴퓨터에게 수행하도록 한다 	만약 더이상 반복을 할 필요가 없다면 반복을 그만둔다">
-
-
 	<link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
+	<script src="./JS/script.js"></script>
 </body>
 
 </html>
