--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 	<meta name="keywords" content="For,반복문,단순반복작업,if">
 	<meta name="description" content="For문(반복문)을 통해 단순반복작업을 컴퓨터에게 수행하도록 한다 	만약 더이상 반복을 할 필요가 없다면 반복을 그만둔다">
 	<link rel="stylesheet" href="style.css">
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
 
 <body>
+	<!-- 생년 -->
+	<select name="birthYear" id="birthYear">
+		<option value=""></option>
+	</select>
 
-	<script src="./JS/script.js"></script>
+
+	<script src="./script/script.js">
+		// if문을 쓰는방법(홀수 넘 짝수 패스)
+		// for문의 증감식을 이용하는 방법
+	</script>
 </body>
 
 </html>
